WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163676
[CSS Parser] Fix -webkit-mask-box-image parsing
https://bugs.webkit.org/show_bug.cgi?id=163676
Summary
[CSS Parser] Fix -webkit-mask-box-image parsing
Dave Hyatt
Reported
2016-10-19 11:42:08 PDT
Blink treats this as a shorthand, but we don't.
Attachments
Patch
(1.78 KB, patch)
2016-10-19 11:43 PDT
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-10-19 11:43:58 PDT
Created
attachment 292088
[details]
Patch
Dave Hyatt
Comment 2
2016-10-19 11:45:34 PDT
Fixed in
r207549
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug