[CSS Parser] Fix -webkit-mask-box-image parsing https://bugs.webkit.org/show_bug.cgi?id=163676

Reviewed by Dean Jackson.

-webkit-mask-box-image is not a shorthand in our current code, so treat it the same as the legacy
-webkit-border-image.

* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::parseSingleValue):
(WebCore::CSSPropertyParser::parseShorthand):



Canonical link: https://commits.webkit.org/181459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207549 268f45cc-cd09-0410-ab3c-d52691b4dbfc